[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/Water.tscn" type="PackedScene" id=1]
[ext_resource path="res://Events/Leak.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=1]
radius = 0.117004

[node name="Leak" type="StaticBody"]
script = ExtResource( 2 )

[node name="Water" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="FailTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="mouse_entered" from="." to="." method="_on_Leak_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Leak_mouse_exited"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_ActionTimer_timeout"]
[connection signal="timeout" from="FailTimer" to="." method="_on_FailTimer_timeout"]
